# zyron-assistant

./: .env  .env.example  .gitignore  README.md  activity_monitor.py  brain.py  file_finder.py  file_tracker.py  muscles.py  pyproject.toml  requirements.txt  run_silent.vbs  setup.bat  start_zyron.bat  stop_zyron.bat  tele_agent.py  test_mic.py
browser_extension/: background.js  manifest.json  popup.html  popup.js
docs/: ACTIVITIES_FEATURE_GUIDE.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRIBUTING.md  EXTENSION_INSTALL_GUIDE.md  INSTALLATION.md  LOCATION_ACCURACY_GUIDE.md  USER_MANUAL.md
firefox_extension/: background.js  content_agent.js  manifest.json
src/zyron/: main.py
src/zyron/agents/: system.py  telegram.py
src/zyron/core/: brain.py  browser_host.py  memory.py  native_manifest.json  voice.py  wake_word.py
src/zyron/features/: activity.py  browser_control.py  clipboard.py  focus_mode.py
src/zyron/features/files/: finder.py  tracker.py
src/zyron/scripts/: register_native_host.py
src/zyron/utils/: settings.py
src/zyron_linux/: main.py
src/zyron_linux/docs/: LINUX_INSTALLATION.md
